fix: fixing nav horizontal scroll problem and chaning main content hight to vh from dvh

--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -56,11 +56,6 @@
     }
 }
 
-#nav-mask {
-    /* mask-image: linear-gradient(rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0.8) 70%, transparent 90%); */
-    width: calc(100dvw + 6rem);
-}
-
 @media print {
     #nav-mask {
         display: none !important;
